# VapourSynth-EEDI3

./: Makefile.am  OPTIMIZATIONS.md  PERFORMANCE_SUMMARY.md  README.md  configure.ac  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: build.yml  codespell.yml
EEDI3/: EEDI3.cpp  EEDI3.h  EEDI3.hpp  EEDI3.vcxproj  EEDI3.vcxproj.filters  EEDI3CL.cl  EEDI3CL.cpp  EEDI3CL.hpp  EEDI3CL_AVX2.cpp  EEDI3CL_SSE2.cpp  EEDI3CL_SSE4.cpp  EEDI3_AVX.cpp  EEDI3_AVX2.cpp  EEDI3_AVX512.cpp  EEDI3_SSE2.cpp  EEDI3_SSE4.cpp  shared.hpp
EEDI3/vectorclass/: vectorf128.h  vectorf256.h  vectorf256e.h  vectorf512.h  vectorf512e.h  vectorfp16.h  vectorfp16e.h  vectori128.h  vectori256.h  vectori256e.h  vectori512.h  vectori512e.h  vectori512s.h  vectori512se.h
