[build-system]
requires = ["meson-python", "VapourSynth>=74"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-eedi3"
description = "Enhanced Edge Directed Interpolation 3"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
keywords = ["vapoursynth", "eedi3"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C++",
  "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth>=74"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/HomeOfVapourSynthEvolution/VapourSynth-EEDI3"
Issues = "https://github.com/HomeOfVapourSynthEvolution/VapourSynth-EEDI3/issues"

[tool.meson-python.wheel]
exclude = ["*.dll.a"]
